--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 .compH1 {
-  color: firebrick;
+  color:#44701B;
 } 
 .appBody {
   font-family: 'Montserrat', sans-serif;
